# spherex-cutoutdb

./: .readthedocs.yaml  CHANGELOG.md  DEFAULT_CONFIG.yaml  LICENSE  MANIFEST.in  README.md  RELEASE.md  mkdocs.yml  pyproject.toml  tutorials_SC.md
docs/: CLI_WORKFLOW.md  DATA_MODEL.md  DOWNLOAD_STRATEGY.md  INSTALL_HELP.md  INTEGRATED_WORKFLOW_TUTORIAL.md  PHOTOMETRY_TUTORIAL.md  PROJECT_DESIGN.md  VALIDATION_PLAN.md  batch_runs.md  calibration.md  cli_reference.md  config_reference.md  index.md  output_schema.md  qa_flags.md  quickstart.md  release_notes.md  release_process.md  science_method.md  troubleshooting.md
examples/: input_catalog.csv  mock_sia_response.xml  project_config.example.yaml  run_quickstart.sh
src/spherex_cutoutdb/: __init__.py  __main__.py  catalog.py  cli.py  cloud_access.py  config.py  database.py  downloader.py  exceptions.py  filenames.py  integrated_workflow.py  irsa_cutouts.py  irsa_sia.py  logging_utils.py  manifest.py  models.py  planner.py  schema.sql  summary.py  validator.py
src/spherex_cutoutdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/spherex_cutoutdb/calibration/: __init__.py  registry.py  resolver.py  sync.py  validate.py
tests/: conftest.py  test_catalog.py  test_cli_smoke.py  test_config.py  test_cutout_url.py  test_database.py  test_downloader.py  test_integrated_workflow.py  test_photometry_pipeline.py  test_photometry_science_fix.py  test_planner.py  test_release_packaging.py  test_sia_parser.py  test_validator.py
tests/data/: tiny_sources.csv
(+17 files in other folders)
